Add UI tests based on built-in test framework